--- a/app/src/main/res/drawable/btn_style_2.xml
+++ b/app/src/main/res/drawable/btn_style_2.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding = "10dp">
     <!-- 버튼 색깔 -->
-    <solid android:color="#FD8A69"/>
+    <solid android:color="#C56E55"/>
     <!-- 네 귀퉁이? 모양 -->
     <corners
-       android:radius="10dp"/>
+        android:radius="10dp"/>
     <padding
         android:bottom="0dp"
         android:left="0dp"
