--- a/app/src/main/res/layout/activity_imageupload.xml
+++ b/app/src/main/res/layout/activity_imageupload.xml
@@ -28,16 +28,16 @@
     <ImageView
         android:id="@+id/iv_photo"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:padding="15dp"/>
+        android:layout_height="450dp"
+        android:padding="15dp" />
 
     <Button
         android:id="@+id/select_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/btn_color_drawable"
         android:text="Choose workbook"
-        android:textSize="20dp"
-        android:background="@drawable/btn_color_drawable"/>
+        android:textSize="20dp" />
 
 
 </LinearLayout>
