--- a/app/src/main/res/layout/activity_selectanssheet.xml
+++ b/app/src/main/res/layout/activity_selectanssheet.xml
@@ -1,298 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="15dp"
-    android:background="#ffffff">
-//교재이름 textview로 작성
-    <TableRow
-        android:orientation="horizontal">
+    android:background="#ffffff"
+    >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10dp"
-            android:paddingBottom="15dp"
-            android:text="AnsSheetName"
-            android:textSize="25dp"
-            android:textColor="@color/black"/>
-
-        <TextView
-            android:layout_width="92dp"
-            android:layout_height="match_parent"
-            android:paddingRight="10dp"
-            android:paddingBottom="15dp"
-            android:text="Date"
-            android:textSize="25dp"
-            android:textColor="@color/black"/>
-
-        <TextView
-            android:layout_width="98dp"
-            android:layout_height="wrap_content"
-            android:paddingBottom="15dp"
-            android:text="FileName"
-            android:textSize="25dp"
-            android:textColor="@color/black"/>
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="Math note 1-1"
-            android:textSize="20dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="22-00-55"
-            android:textSize="20dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="anssheet.xlsx"
-            android:textSize="20dp" />
-
-    </TableRow>
     <TextView
-        android:textSize="10dp"/>
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="Math note 1-2"
-            android:textSize="20dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="22-00-55"
-            android:textSize="20dp"/>
+        android:layout_width="626dp"
+        android:layout_height="wrap_content"
+        android:paddingRight="10dp"
+        android:paddingBottom="15dp"
+        android:text="AnsSheetName  Date FileName"
+        android:textColor="@color/black"
+        android:textSize="25dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="anssheet.xlsx"
-            android:textSize="20dp" />
 
-    </TableRow>
+
+<RadioGroup
+    android:id="@+id/radioG"
+     android:layout_height="wrap_content"
+    android:layout_width="wrap_content">
+    <RadioButton
+        android:id="@+id/r1_btn"
+        android:layout_width="600dp"
+        android:layout_height="match_parent"
+        android:background="#fd8867"
+        android:minHeight="48dp"
+        android:text="Math note 1-1      12-13    anssheet.xlsx"
+        android:textSize="20dp" />
     <TextView
-        android:textSize="10dp"/>
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="Math note 1-3"
-            android:textSize="20dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="22-00-55"
-            android:textSize="20dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="anssheet.xlsx"
-            android:textSize="20dp" />
-
-    </TableRow>
+        android:textSize="10dp" android:layout_height="10dp" android:layout_width="match_parent"/>
+    <RadioButton
+        android:id="@+id/r2_btn"
+        android:layout_width="501dp"
+        android:layout_height="wrap_content"
+        android:background="#fd8867"
+        android:minHeight="48dp"
+        android:text="Ssen elementry    10-21   SsenSheet.xlsx"
+        android:textSize="20dp" />
     <TextView
-        android:textSize="10dp"/>
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="Math note 1-4"
-            android:textSize="20dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="22-00-55"
-            android:textSize="20dp"/>
+        android:textSize="10dp" android:layout_height="10dp" android:layout_width="match_parent"/>
+    <RadioButton
+        android:id="@+id/r3_btn"
+        android:layout_width="585dp"
+        android:layout_height="wrap_content"
+        android:background="#fd8867"
+        android:minHeight="48dp"
+        android:text="Middle test           05-18   middlesheet.xlsx"
+        android:textSize="20dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="anssheet.xlsx"
-            android:textSize="20dp" />
-
-    </TableRow>
     <TextView
-        android:textSize="10dp"/>
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="Math note 1-5"
-            android:textSize="20dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="22-00-55"
-            android:textSize="20dp"/>
+        android:textSize="10dp" android:layout_height="10dp" android:layout_width="match_parent"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="anssheet.xlsx"
-            android:textSize="20dp" />
+</RadioGroup>
 
-    </TableRow>
     <TextView
-        android:textSize="10dp"/>
-    <TableRow
+        android:textSize="10dp" android:layout_height="wrap_content" android:layout_width="match_parent"/>
+    <Button
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="Math note 1-6"
-            android:textSize="20dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="22-00-55"
-            android:textSize="20dp"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/Scoring_btn"
+        android:text="Scoring"
+        android:textSize="20dp"
+        android:layout_gravity="center"
+        android:background="@drawable/btn_color_drawable"
+        />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="anssheet.xlsx"
-            android:textSize="20dp" />
-
-    </TableRow>
-    <TextView
-        android:textSize="10dp"/>
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="Math note 1-7"
-            android:textSize="20dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="22-00-55"
-            android:textSize="20dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="anssheet.xlsx"
-            android:textSize="20dp" />
-
-    </TableRow>
-    <TextView
-        android:textSize="10dp"/>
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="Math note 1-8"
-            android:textSize="20dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="22-00-55"
-            android:textSize="20dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="anssheet.xlsx"
-            android:textSize="20dp" />
-
-    </TableRow>
-    <TextView
-        android:textSize="10dp"/>
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="Math note 1-9"
-            android:textSize="20dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="22-00-55"
-            android:textSize="20dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="anssheet.xlsx"
-            android:textSize="20dp" />
-
-    </TableRow>
-    <TextView
-        android:textSize="10dp"/>
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="Math note 1-10"
-            android:textSize="20dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="22-00-55"
-            android:textSize="20dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#DDA0DD"
-            android:text="anssheet.xlsx"
-            android:textSize="20dp" />
-
-    </TableRow>
-
-</TableLayout>
+</LinearLayout>
