--- a/app/src/main/res/layout/activity_scoreresult.xml
+++ b/app/src/main/res/layout/activity_scoreresult.xml
@@ -65,7 +65,7 @@
 
             <TextView
                 android:background="@drawable/table_color_drawable"
-                android:text="Alice"
+                android:text="강호동"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="18dp"
@@ -104,7 +104,7 @@
 
             <TextView
                 android:background="@drawable/table_color_drawable"
-                android:text="Peter"
+                android:text="유재석"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="18dp"
@@ -143,7 +143,7 @@
 
             <TextView
                 android:background="@drawable/table_color_drawable"
-                android:text="Harry"
+                android:text="신동엽"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="18dp"
@@ -182,7 +182,7 @@
 
             <TextView
                 android:background="@drawable/table_color_drawable"
-                android:text="Totoro"
+                android:text="이경규"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="18dp"
@@ -221,7 +221,7 @@
 
             <TextView
                 android:background="@drawable/table_color_drawable"
-                android:text="Vaseline"
+                android:text="이효리"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="18dp"
